--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -40,178 +40,180 @@
   <section class="fixtures bg-white rounded-lg p-6 shadow">
     <h2 class="text-3xl font-extrabold mb-6 text-center text-blue-800">📅 Tournament Fixtures</h2>
 
-    <!-- Group A Fixtures with Match Numbers -->
-    <div class="mb-10">
-      <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Group A Matches</h3>
-      <div class="space-y-4">
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Thunderbolt</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Messiah FC</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 1</span>
+    <div class="space-y-4">
+      <!-- Matches interleaved Group A and Group B -->
+      
+      <!-- Match 1 (Group A) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Thunderbolt</span>
         </div>
-
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">White Panthers</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Thunderbolt</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 2</span>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Messiah FC</span>
         </div>
-
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Messiah FC</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">White Panthers</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 3</span>
-        </div>
-
-        <!-- Reverse fixtures -->
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Messiah FC</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Thunderbolt</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 4</span>
-        </div>
-
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Thunderbolt</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">White Panthers</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 5</span>
-        </div>
-
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">White Panthers</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Messiah FC</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 6</span>
-        </div>
+        <span class="font-semibold text-slate-700">Match 1</span>
       </div>
-    </div>
 
-    <!-- Group B Fixtures with Match Numbers -->
-    <div class="mb-10">
-      <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Group B Matches</h3>
-      <div class="space-y-4">
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Amingos FC</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Strawhat Pirates</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 7</span>
+      <!-- Match 2 (Group B) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Amingos FC</span>
         </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Strawhat Pirates</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 2</span>
+      </div>
 
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Red Bulls Eleven</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Amingos FC</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 8</span>
+      <!-- Match 3 (Group A) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">White Panthers</span>
         </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Thunderbolt</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 3</span>
+      </div>
 
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Strawhat Pirates</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Red Bulls Eleven</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 9</span>
+      <!-- Match 4 (Group B) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Red Bulls Eleven</span>
         </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Amingos FC</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 4</span>
+      </div>
 
-        <!-- Reverse fixtures -->
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Strawhat Pirates</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Amingos FC</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 10</span>
+      <!-- Match 5 (Group A) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Messiah FC</span>
         </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">White Panthers</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 5</span>
+      </div>
 
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Amingos FC</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Red Bulls Eleven</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 11</span>
+      <!-- Match 6 (Group B) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Strawhat Pirates</span>
         </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Red Bulls Eleven</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 6</span>
+      </div>
 
-        <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
-          <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Red Bulls Eleven</span>
-          </div>
-          <span class="text-slate-500 font-medium">vs</span>
-          <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
-            <span class="font-semibold">Strawhat Pirates</span>
-          </div>
-          <span class="font-semibold text-slate-700">Match 12</span>
+      <!-- Match 7 (Group A Reverse) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Messiah FC</span>
         </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Thunderbolt</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 7</span>
+      </div>
+
+      <!-- Match 8 (Group B Reverse) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Strawhat Pirates</span>
+        </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Amingos FC</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 8</span>
+      </div>
+
+      <!-- Match 9 (Group A Reverse) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Thunderbolt</span>
+        </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">White Panthers</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 9</span>
+      </div>
+
+      <!-- Match 10 (Group B Reverse) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Amingos FC</span>
+        </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Red Bulls Eleven</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 10</span>
+      </div>
+
+      <!-- Match 11 (Group A Reverse) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">White Panthers</span>
+        </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Messiah FC</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 11</span>
+      </div>
+
+      <!-- Match 12 (Group B Reverse) -->
+      <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
+        <div class="flex items-center gap-2">
+          <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Red Bulls Eleven</span>
+        </div>
+        <span class="text-slate-500 font-medium">vs</span>
+        <div class="flex items-center gap-2">
+          <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
+          <span class="font-semibold">Strawhat Pirates</span>
+        </div>
+        <span class="font-semibold text-slate-700">Match 12</span>
       </div>
     </div>
 
     <!-- Knockout Stage -->
-    <div>
+    <div class="mt-10">
       <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Knockout Stage</h3>
       <div class="space-y-4">
         <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">
