--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -126,42 +126,12 @@
   </header>
 
   <!-- Main layout -->
-  <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 px-4 md:px-0 py-8">
+  <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-1 gap-10 px-4 md:px-0 py-8">
     <!-- Main content -->
-    <main class="md:col-span-2 bg-white rounded-2xl shadow p-6 content-scroll">
-      <h1 class="text-3xl font-bold mb-6">Independence Cup 2025</h1>
+    <main class="bg-white rounded-2xl shadow p-6 content-scroll">
       
-      <div class="mb-6 space-y-4">
-        <p><strong>📅 Event Date</strong><br>24 August 2025</p>
-        <p><strong>📍 Venue</strong><br>Turf XL</p>
-        <p><strong>⏰ Time</strong><br>9:00 AM – 6:00 PM</p>
-        <p><strong>👥 Organizers</strong><br>Debayan, Gourav &amp; Jyotishka</p>
-        <p><strong>👥 Teams</strong><br>Thunderbolt, Red Bulls Eleven, Messiah FC, White Panthers, Strawhat Pirates, Amingos FC</p>
-        <p><strong>👥 Captains</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan, Akash Jr</p>
-        <p><strong>⚽ Number of Teams</strong><br>6</p>
-      </div>
-      
-      <h2 class="text-xl font-semibold mb-4">🏆 Independence Cup 2025 – Tournament Guidelines 🏆</h2>
-      <article class="space-y-6 text-sm text-slate-700 leading-relaxed">
-        <section>
-          <h3 class="font-semibold mb-1">Event Overview</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Celebrating Independence Day with a spirited football tournament at Turf XL.</li>
-            <li>An opportunity to enjoy competitive play, sportsmanship, and camaraderie.</li>
-          </ul>
-        </section>
-        <section>
-          <h3 class="font-semibold mb-1">Rules & Regulations</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Matches will be played in league-cum-knockout format.</li>
-            <li>Each half will be 8 minutes with a 3 min halftime break.</li>
-            <li>Fair play, discipline, and respect for referees are mandatory.</li>
-          </ul>
-        </section>
-      </article>
-
       <!-- Group Teams Display -->
-      <section class="groups bg-slate-50 rounded-lg p-6 shadow my-8">
+      <section class="groups bg-slate-50 rounded-lg p-6 shadow mb-10">
         <h2 class="text-3xl font-extrabold mb-6 text-center text-blue-800">🗂️ Group Teams</h2>
         <div class="flex justify-around flex-wrap gap-10 text-slate-800">
           <div>
@@ -377,12 +347,6 @@
         </div>
       </section>
     </main>
-
-    <!-- Sidebar -->
-    <section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
-      <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
-      <p class="text-sm text-blue-700">The team fixtures will be released soon. All players and teams are requested to keep an eye on the notice board for updates.</p>
-    </section>
   </div>
 
   <!-- Mobile menu script -->
