--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Football Auctioneer - Home</title>
+  <title>Football Auctioneer - fixture</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -100,9 +100,9 @@
         </a>
         <!-- Desktop Nav -->
         <div class="desktop-nav hidden md:flex gap-6">
-          <a href="index.html" class="nav-link active" aria-current="page">Home</a>
+          <a href="index.html" class="nav-link active">Home</a>
           <a href="team_list.html" class="nav-link">Teams</a>
-          <a href="team_fixtures.html" class="nav-link">Fixtures</a>
+          <a href="team_fixtures.html" class="nav-link" aria-current="page">Fixtures</a>
           <a href="admin.html" class="nav-link">Admin</a>
           <a href="about_us.html" class="nav-link">About Us</a>
         </div>
@@ -116,9 +116,9 @@
       </div>
       <!-- Mobile dropdown -->
       <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
-        <a href="index.html" class="mobile-link active" aria-current="page">Home</a>
+        <a href="index.html" class="mobile-link active">Home</a>
         <a href="team_list.html" class="mobile-link">Teams</a>
-        <a href="team_fixtures.html" class="mobile-link">Fixtures</a>
+        <a href="team_fixtures.html" class="mobile-link" aria-current="page">Fixtures</a>
         <a href="admin.html" class="mobile-link">Admin</a>
         <a href="about_us.html" class="mobile-link">About Us</a>
       </div>
@@ -361,3 +361,4 @@
   </script>
 </body>
 </html>
+
