--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -334,12 +334,12 @@
 			  <h4 class="font-bold text-lg mb-4">Semi Final 1</h4>
 			  <div class="flex items-center gap-4">
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
 				  <span>Winner Group A</span>
 				</div>
 				<span class="font-extrabold text-xl">vs</span>
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
 				  <span>Runner-up Group B</span>
 				</div>
 			  </div>
@@ -349,12 +349,12 @@
 			  <h4 class="font-bold text-lg mb-4">Semi Final 2</h4>
 			  <div class="flex items-center gap-4">
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
 				  <span>Winner Group B</span>
 				</div>
 				<span class="font-extrabold text-xl">vs</span>
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
 				  <span>Runner-up Group A</span>
 				</div>
 			  </div>
@@ -364,12 +364,12 @@
 			  <h4 class="font-bold text-lg mb-4">Third Place Match</h4>
 			  <div class="flex items-center gap-4">
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
 				  <span>Loser SF1</span>
 				</div>
 				<span class="font-extrabold text-xl">vs</span>
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-14 w-14 rounded-full mb-2" />
 				  <span>Loser SF2</span>
 				</div>
 			  </div>
@@ -379,12 +379,12 @@
 			  <h4 class="font-extrabold text-yellow-700 text-lg mb-4">🏆 Final</h4>
 			  <div class="flex items-center gap-4">
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-16 w-16 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-16 w-16 rounded-full mb-2" />
 				  <span class="font-bold text-yellow-700">Winner SF1</span>
 				</div>
 				<span class="font-extrabold text-2xl text-yellow-700">vs</span>
 				<div class="flex flex-col items-center">
-				  <img src="default_batch.png" alt="Batch" class="h-16 w-16 rounded-full mb-2" />
+				  <img src="defaultlogo.jpg" alt="Batch" class="h-16 w-16 rounded-full mb-2" />
 				  <span class="font-bold text-yellow-700">Winner SF2</span>
 				</div>
 			  </div>
@@ -406,3 +406,4 @@
   </script>
 </body>
 </html>
+
