--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -98,20 +98,21 @@
 		  <h2 class="text-3xl font-extrabold mb-8 text-center text-blue-800 tracking-wide uppercase">🗂️ Group Teams</h2>
 		  <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 text-gray-800">
 			
+
 			<!-- Group A -->
 			<div class="bg-slate-50 rounded-lg p-6 shadow-inner border border-gray-200">
 			  <h3 class="text-2xl font-semibold mb-6 border-b border-gray-300 pb-3">Group A</h3>
 			  <ul class="space-y-4 list-none">
 				<li class="flex items-center gap-3 cursor-pointer hover:text-blue-600 transition">
-				  <span class="block h-3 w-3 rounded-full bg-blue-500 flex-shrink-0"></span>
+				  <img src="Thunderbolt.jpg" alt="Thunderbolt Logo" class="h-8 w-8 rounded-full object-cover flex-shrink-0" />
 				  <span class="text-lg font-medium">Thunderbolt</span>
 				</li>
 				<li class="flex items-center gap-3 cursor-pointer hover:text-blue-600 transition">
-				  <span class="block h-3 w-3 rounded-full bg-blue-500 flex-shrink-0"></span>
+				  <img src="Messiah FC.jpg" alt="Messiah FC Logo" class="h-8 w-8 rounded-full object-cover flex-shrink-0" />
 				  <span class="text-lg font-medium">Messiah FC</span>
 				</li>
 				<li class="flex items-center gap-3 cursor-pointer hover:text-blue-600 transition">
-				  <span class="block h-3 w-3 rounded-full bg-blue-500 flex-shrink-0"></span>
+				  <img src="White Panthers.jpg" alt="White Panthers Logo" class="h-8 w-8 rounded-full object-cover flex-shrink-0" />
 				  <span class="text-lg font-medium">White Panthers</span>
 				</li>
 			  </ul>
@@ -122,15 +123,15 @@
 			  <h3 class="text-2xl font-semibold mb-6 border-b border-gray-300 pb-3">Group B</h3>
 			  <ul class="space-y-4 list-none">
 				<li class="flex items-center gap-3 cursor-pointer hover:text-blue-600 transition">
-				  <span class="block h-3 w-3 rounded-full bg-green-500 flex-shrink-0"></span>
+				  <img src="Amingos FC.jpg" alt="Amingos FC Logo" class="h-8 w-8 rounded-full object-cover flex-shrink-0" />
 				  <span class="text-lg font-medium">Amingos FC</span>
 				</li>
 				<li class="flex items-center gap-3 cursor-pointer hover:text-blue-600 transition">
-				  <span class="block h-3 w-3 rounded-full bg-green-500 flex-shrink-0"></span>
+				  <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates Logo" class="h-8 w-8 rounded-full object-cover flex-shrink-0" />
 				  <span class="text-lg font-medium">Strawhat Pirates</span>
 				</li>
 				<li class="flex items-center gap-3 cursor-pointer hover:text-blue-600 transition">
-				  <span class="block h-3 w-3 rounded-full bg-green-500 flex-shrink-0"></span>
+				  <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven Logo" class="h-8 w-8 rounded-full object-cover flex-shrink-0" />
 				  <span class="text-lg font-medium">Red Bulls Eleven</span>
 				</li>
 			  </ul>
@@ -406,4 +407,3 @@
   </script>
 </body>
 </html>
-
