--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <!-- Sidebar -->
 <section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
   <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
-  <p class="text-sm text-blue-700">The team fixtures will be released soon. All players and teams are requested to keep an eye on the notice board for updates.</p>
+  <p class="text-sm text-blue-700">The team fixtures have been released. All players and teams are requested to check the Fixtures tab for details.</p>
 </section>
   </div>
   <!-- Mobile menu script -->
@@ -176,3 +176,4 @@
   </script>
 </body>
 </html>
+
