--- a/index.html
+++ b/index.html
@@ -158,11 +158,18 @@
         </section>
       </article>
     </main>
-<!-- Sidebar -->
-<section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
-  <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
-  <p class="text-sm text-blue-700">The team fixtures have been released. All players and teams are requested to check the Fixtures tab for details.</p>
-</section>
+    <!-- Sidebar -->
+    <section class="bg-gradient-to-r from-blue-100 via-blue-50 to-blue-100 border-l-4 border-blue-500 rounded-xl p-5 shadow-md">
+      <div class="flex items-center gap-3">
+        <span class="text-blue-600 text-2xl animate-bounce">📢</span>
+        <h2 class="text-2xl font-bold text-blue-800">Notice Board</h2>
+      </div>
+      <p class="mt-3 text-base text-blue-700 leading-relaxed">
+        ✅ <strong>The team fixtures have been released!</strong><br>
+        All players and teams are requested to check the 
+        <span class="font-semibold text-blue-900">Fixtures Tab</span> for details.
+      </p>
+    </section>
   </div>
   <!-- Mobile menu script -->
   <script>
@@ -176,4 +183,5 @@
   </script>
 </body>
 </html>
+
 
