--- a/about_us.html
+++ b/about_us.html
@@ -69,6 +69,31 @@
       object-fit: cover;
       border: 4px solid #e2e8f0;
     }
+
+    /* Winners Gallery Styles */
+    .winner-card {
+      background: #f1f5f9;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgb(0 0 0 / 0.08);
+      padding: 1.5rem 1rem;
+      text-align: center;
+      transition: transform 0.18s;
+    }
+
+    .winner-card:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 8px 24px rgb(0 0 0 / 0.14);
+    }
+
+    .winner-photo {
+      width: 100%;
+      max-width: 320px;
+      aspect-ratio: 4 / 3;
+      object-fit: cover;
+      border-radius: 0.75rem;
+      box-shadow: 0 2px 8px rgb(0 0 0 / 0.04);
+      margin: 0 auto;
+    }
   </style>
 </head>
 <body>
@@ -131,7 +156,6 @@
         <p class="text-slate-600 text-sm">Co-Organizer</p>
       </div>
     </div>
-
     <!-- New About Us section -->
     <section class="bg-white rounded-2xl shadow p-6 mt-12 text-slate-700 leading-relaxed text-justify">
       <p>
@@ -146,6 +170,28 @@
       <p class="mt-4">
         Join us on this incredible journey towards greatness, as we continue to build a legacy of teamwork, respect, and unforgettable moments on the field. Together, we play, we conquer, we are eleven.
       </p>
+    </section>
+
+    <!-- Winners Gallery -->
+    <section class="bg-white rounded-2xl shadow p-6 mt-12">
+      <h2 class="text-2xl font-bold mb-8 text-center text-gray-800">Champions Gallery</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- Winner Year 2025 -->
+        <div class="winner-card">
+          <img src="Winner2025.jpg" alt="2025 Winners" class="winner-photo" />
+          <h3 class="text-lg font-semibold mt-4">2025 Champions</h3>
+        </div>
+        <!-- Winner Year 2024 -->
+        <div class="winner-card">
+          <img src="Winner2024.jpg" alt="2024 Winners" class="winner-photo" />
+          <h3 class="text-lg font-semibold mt-4">2024 Champions</h3>
+        </div>
+        <!-- Winner Year 2023 -->
+        <div class="winner-card">
+          <img src="Winner2023.jpg" alt="2023 Winners" class="winner-photo" />
+          <h3 class="text-lg font-semibold mt-4">2023 Champions</h3>
+        </div>
+      </div>
     </section>
   </main>
   <!-- Mobile menu script -->
