--- a/about_us.html
+++ b/about_us.html
@@ -183,7 +183,7 @@
         </div>
         <!-- Winner Year 2023 -->
         <div class="winner-card">
-          <img src="Winner2023.mp4" alt="2023 Winners" class="winner-photo" />
+          <img src="Winner2023.jpg" alt="2023 Winners" class="winner-photo" />
           <h3 class="text-lg font-semibold mt-4">2023 Champions</h3>
         </div>
         <!-- Winner Year 2022 -->
