--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -142,7 +142,7 @@
 
       <!-- Fixtures Cards -->
       <section class="fixtures bg-white rounded-lg p-6 shadow">
-        <h2 class="text-3xl font-extrabold mb-6 text-center text-blue-800">📅 Tournament Fixtures</h2>
+        <h2 class="text-3xl font-extrabold mb-6 text-center text-blue-800">Tournament Fixtures</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
           <!-- Matchday 1-12 Cards -->
           <div class="fixture-card bg-slate-50 rounded-xl shadow-lg p-5 flex flex-col items-center">
@@ -407,3 +407,4 @@
   </script>
 </body>
 </html>
+
