--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <div class="nav-buttons">
         <button onclick="location.href='join.html'">🔹 Join the Community</button>
         <button onclick="location.href='team_fixtures.html'">🔹 Upcoming Fixtures</button>
-		<button onclick="location.href='team_fixtures.html'">🔹 Upcoming Tournament</button>
+		<button onclick="location.href='tournament.html'">🔹 Upcoming Tournament</button>
       </div>
     </section>
 
