--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <p class="max-w-2xl text-lg md:text-xl text-gray-300 mb-8">
         Join us in celebrating the spirit of football – connect, compete, and cheer together!
       </p>
+		<a href="join.html" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition">
+        🤝 Join US
+      	</a>
       <a href="tournament.html" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition">
         🏆 Tournaments
       </a>
