--- a/index.html
+++ b/index.html
@@ -30,20 +30,16 @@
   <!-- ✅ Hero Section -->
   <section class="relative bg-cover bg-center h-[90vh]" style="background-image: url('https://images.unsplash.com/photo-1600359756538-527414116d9d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');">
     <div class="absolute inset-0 bg-black/70"></div>
-    <div class="relative z-10 flex flex-col items-center justify-center h-full text-center px-4">
-      <h2 class="text-4xl md:text-6xl font-extrabold mb-6 text-green-400 animate-pulse">
-        Welcome to Our Football Community
-      </h2>
-      <p class="max-w-2xl text-lg md:text-xl text-gray-300 mb-8">
-        Join us in celebrating the spirit of football – connect, compete, and cheer together!
-      </p>
-		<a href="join.html" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition">
-        🤝 Join US
-      	</a>
-      <a href="tournament.html" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition">
-        🏆 Tournaments
-      </a>
-    </div>
+	<div class="flex flex-col md:flex-row gap-4 justify-center">
+	  <a href="join.html" 
+	     class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition">
+	    🤝 Join Us
+	  </a>
+	  <a href="tournament.html" 
+	     class="border-2 border-green-500 text-green-400 hover:bg-green-500 hover:text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition">
+	    🏆 Tournaments
+	  </a>
+	</div>
   </section>
 
   <!-- 🚧 Upcoming Fixtures Section (Under Development) -->
